--- a/public/Index.html
+++ b/public/Index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BackEnd Server</title>
+    <title>BackEnd</title>
 </head>
 
 <body>
-
+    <h1>Hi there!!!</h1>
 </body>
 
 </html>
